# RayTracingEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  aabb.h  bvh.h  camera.h  main.cpp  materials.cpp  materials.h  mesh.h  obj_loader.h  plane.h  ray.h  raytracer  scene.h  scene.txt  scene_loader.h  shape.h  sphere.h  triangle.h  vec3.h
.claude/: settings.local.json
benchmarks/: CMakeLists.txt  bench_alloc.cpp  bench_camera.cpp  bench_concepts.cpp  bench_direct_lighting.cpp  bench_hit.cpp  bench_ibl.cpp  bench_normals.cpp  bench_pbr.cpp  bench_procedural.cpp  bench_simd.cpp  bench_textures.cpp  bench_threadpool.cpp  bench_vec3.cpp
memory/: project_raytracer.md  roadmap_complet.md  teaching_role.md  user_profile.md
scenes/: scene.txt  scene_cornell.txt  scene_csg.txt  scene_direct.txt  scene_dof.txt  scene_final.txt  scene_gallery.txt  scene_ibl.txt  scene_landscape.txt  scene_normals.txt  scene_pbr.txt  scene_procedural.txt  scene_textures.txt  scene_transforms.txt
src/camera/: camera.h
src/core/: linear_allocator.h  linear_resource.h  mat3.h  mat4.h  object_pool.h  post_process.h  ray.h  renderer.h  simd.h  sphere_accel.h  stack_allocator.h  thread_pool.h  tile_renderer.h  vec3.h  work_stealing_pool.h
src/geometry/: aabb.h  box.h  bvh.h  concepts.h  csg.h  mesh.h  plane.h  procedural.h  quadric.h  shape.h  shape_traits.h  sphere.h  triangle.h
src/lights/: lights.h
src/materials/: brdf.h  env_map.h  materials.cpp  materials.h  perlin.h  texture.h
src/scene/: obj_loader.h  scene.h  scene_loader.h  transform_node.h
subjects/: TP1.md  TP10.md  TP11.md  TP12.md  TP12bis.md  TP13.md  TP14.md  TP15.md  TP16.md  TP17.md  TP18.md  TP19.md  TP2.md  TP20.md  TP21.md  TP22.md  TP23.md  TP24.md  TP25.md  TP26.md  TP27.md  TP28.md  TP29.md  TP3.md  TP30.md  TP31.md  TP32.md  TP4.md  TP5.md  TP6.md  TP7.md  TP8.md  TP9.md
tests/: CMakeLists.txt  test_aabb.cpp  test_alloc.cpp  test_camera.cpp  test_concepts.cpp  test_direct_lighting.cpp  test_ibl.cpp  test_materials.cpp  test_normals.cpp  test_pbr.cpp  test_postprocess.cpp  test_primitives.cpp  test_procedural.cpp  test_ray.cpp  test_scene.cpp  test_shapes.cpp  test_textures.cpp  test_threadpool.cpp  test_transform.cpp  test_vec3.cpp
